fixed a small layout issue

--- a/poster.css
+++ b/poster.css
@@ -4,7 +4,7 @@
 }
 .poster__container{
   width:100%;
-  height: 164.7vh;
+  height: 154.7vh;
   background-color:white;
   padding-top: 16vh;
   padding-bottom: 6.5%;
